<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Journey</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="default_station">station</string>
    <string name="default_time">00:00:00</string>
    <string name="default_operator">operator</string>
    <string name="lowest_price_message">Lowest Price</string>
    
    <string name="origin_station_message">Origin</string>
    <string name="destination_station_message">Destination</string>
    <string name="operator_station_message">Operator</string>
    <string name="duration_journey_message">Duration</string>
    <string name="start_time_journey_message">Start time</string>
    <string name="arrival_time_journey_message">Arrival time</string>
    <string name="undefined_message">undefined</string>

</resources>
