<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_row_general"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/originTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/row_general_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/row_general_vertical_margin"
        android:text="@string/default_station" />

    <TextView
        android:id="@+id/destinationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/originTextView"
        android:layout_marginBottom="@dimen/row_general_vertical_margin"
        android:layout_marginLeft="@dimen/row_general_horizontal_margin"
        android:layout_marginTop="@dimen/row_general_vertical_margin"
        android:text="@string/default_station" />

    <TextView
        android:id="@+id/startTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_toRightOf="@id/originTextView"
        android:text="@string/default_time" />

    <TextView
        android:id="@+id/arrivalTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/row_general_horizontal_margin"
        android:layout_toRightOf="@id/startTimeTextView"
        android:text="@string/default_time" />

    <TextView
        android:id="@+id/lowestPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="@dimen/row_general_vertical_margin"
        android:layout_marginTop="@dimen/row_general_secondary_vertical_margin"
        android:text="@string/lowest_price_message"
        android:textColor="@color/red" />
    
    </RelativeLayout>
