<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.silverhillapps.journey.Main$PlaceholderFragment" >

    <RelativeLayout
        android:id="@+id/stationContainer_relativeLayout_detailFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin" >

        <LinearLayout
            android:id="@+id/operatorContainer_linearLayout_detailFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/operator_station_message" />

            <TextView
                android:id="@+id/operator_textView_detailFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/operator_station_message" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/originStation_linearLayout_detailFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/operatorContainer_linearLayout_detailFragment"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/origin_station_message" />

            <TextView
                android:id="@+id/originStation_textView_detailFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/origin_station_message" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/destinationStation_linearLayout_detailFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/operatorContainer_linearLayout_detailFragment"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/destination_station_message" />

            <TextView
                android:id="@+id/destinationStation_textView_detailFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination_station_message" />

        </LinearLayout>

    </RelativeLayout>
    
        <RelativeLayout
            android:id="@+id/timeContainer_relativeLayout_detailFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stationContainer_relativeLayout_detailFragment"
            android:layout_marginTop="@dimen/activity_vertical_margin" >

            <LinearLayout
                android:id="@+id/startTimeContainer_linearLayout_detailFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/start_time_journey_message" />

                <TextView
                    android:id="@+id/startTime_textView_detailFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time_journey_message" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/arrivalTimeContainer_linearLayout_detailFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/arrival_time_journey_message" />

                <TextView
                    android:id="@+id/arrivalTime_textView_detailFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arrival_time_journey_message" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/durationTimeContainer_linearLayout_detailFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/startTimeContainer_linearLayout_detailFragment"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_vertical_margin" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration_journey_message" />

                <TextView
                    android:id="@+id/durationTime_textView_detailFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/duration_journey_message" />

            </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
